--- a/src/content/blog/improve-concentration/index.mdx
+++ b/src/content/blog/improve-concentration/index.mdx
@@ -8,6 +8,8 @@ tags:
   - Mind
   - Mood
 language: 'English'
+author: 'Harvard Health'
+authorAvatar: 'https://api.dicebear.com/7.x/avataaars/svg?seed=Harvard'
 heroImage: { src: './thumbnail.jpg', color: '#9698C1' }
 ---
 
