--- a/src/content/docs/advanced/thanks.mdx
+++ b/src/content/docs/advanced/thanks.mdx
@@ -22,7 +22,7 @@ A big thank you to everyone who has contributed to the [astro-theme-pure](https:
 We would like to express our gratitude to all the sponsors.
 
 <Button
-  href='https://cworld0.com/projects#sponsorship'
+  href='https://cworld0.com/about#sponsorship'
   target='_blank'
   title='Become a Sponsor'
   style='ahead'
