docs author, activities sidebar

--- a/src/content/docs/setup/configuration.mdx
+++ b/src/content/docs/setup/configuration.mdx
@@ -2,6 +2,8 @@
 title: 'Configuration'
 description: 'Configuration files'
 order: 4
+author: 'VapourX'
+authorAvatar: 'https://imgbucket-1313228125.cos.ap-shanghai.myqcloud.com/20250804004505453.jpg'
 ---
 
 ## Theme Configuration
