--- a/src/content/docs/Above-all/general-summary.mdx
+++ b/src/content/docs/Above-all/general-summary.mdx
@@ -1,8 +1,11 @@
 ---
 title: 'General Summary'
-description: 'General Summary'
+description: 'Why we make it.'
 order: 1
 ---
 
 ## VapourX Paper List Usage
 在这个栏目中，有我们团队维护的具身智能各个领域以及各个领域下子领域的Paper List，方便大家快速了解各个领域以及各个领域下子领域的最新进展。
+
+如果你是某一个领域的学习者或者大佬，欢迎你和我们联系并且和我们一起完善这个Paper List，我们十分期待这个Paper List能为所有入门的或者想要了解一个新领域的人提供十分有用的查询工具。
+
