--- a/src/content/docs/world-model/general-summary.mdx
+++ b/src/content/docs/world-model/general-summary.mdx
@@ -4,7 +4,4 @@ description: 'General Summary'
 order: 1
 ---
 
-## VapourX Paper List Usage
-在这个栏目中，有我们团队维护的具身智能各个领域以及各个领域下子领域的Paper List，方便大家快速了解各个领域以及各个领域下子领域的最新进展。
-
-我们非常欢迎每一位社区的成员为我们的Paper List添砖加瓦，如果想要成为
+## 具身世界模型
