Paper list for foundation model

--- a/src/content/docs/Above-all/general-summary.mdx
+++ b/src/content/docs/Above-all/general-summary.mdx
@@ -2,10 +2,33 @@
 title: 'General Summary'
 description: 'Why we make it.'
 order: 1
+updatedDate: 2025-08-10
+author: "ACondaway"
+authorAvatar: "https://avatars.githubusercontent.com/u/115391544?v=4"
 ---
 
 ## VapourX Paper List Usage
-在这个栏目中，有我们团队维护的具身智能各个领域以及各个领域下子领域的Paper List，方便大家快速了解各个领域以及各个领域下子领域的最新进展。
+这里是我们团队精心维护的 具身智能（Embodied AI）领域及其各个细分方向的 Paper List
+我们会持续更新，不仅整理各领域的代表性论文，还会按子方向分类，让大家可以更快找到自己感兴趣的研究进展。无论是想快速入门，还是想追踪某个方向的最新成果，都能在这里一站式获取。
 
-如果你是某一个领域的学习者或者大佬，欢迎你和我们联系并且和我们一起完善这个Paper List，我们十分期待这个Paper List能为所有入门的或者想要了解一个新领域的人提供十分有用的查询工具。
+我们希望这个 Paper List 能成为一个好用的“查找+探索”工具——帮你少踩坑、多发现、有收获。
 
+如果你刚开始学习某个方向，想要找资料；或者你已经是这个领域的老朋友、行业大佬，手里有宝藏论文没处分享，都非常欢迎你加入我们，一起把这个列表做得更全、更好、更有趣。
+
+你的每一次补充，都是在帮更多人少走弯路；你的每一次分享，都可能点亮别人的研究灵感
+
+我们真心希望，这份 Paper List 能成为具身智能学习路上的好伙伴——开放、友好、不断成长，也因为大家的参与而越来越精彩。
+
+在目前，我们已经正在整理或者已经整理的Paper List包括：
+- 具身操作基础模型（Manipulation Foundation Model）
+- 世界模型（World Model）
+- 具身操作与视触觉融合（Embodied Manipulation with Visuo-Tactile Sensor）
+- 具身VLA与RL结合算法（Embodied VLA with RL）
+- 具身多智能体系统（Embodied Multi-Agent System）
+- 具身仿真平台（Embodied Simulation Platform）
+- 灵巧手抓取（Dexterous Hand Grasping）
+- 具身导航（Embodied Navigation）
+- ......
+
+
+<img src="/src/assets/VapourX-curve.png" alt="VapourX Logo" width="30%" />
