--- a/src/content/blog/day16/Day16-Blog.mdx
+++ b/src/content/blog/day16/Day16-Blog.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'AC Daily Blog Eps.16 我们在说的世界模型Pt.1'
-publishDate: 2025-08-01
-updatedDate: 2025-08-01
+title: 'AC Daily Blog Eps.16 我们正在谈论的世界模型Pt.1'
+publishDate: 2025-08-09
+updatedDate: 2025-08-09
 description: '最近Genie-3的发布让World Model变得十分火爆，我们借此机会去review一下这一段时间world model是如何发展的，并且在各种领域中都代表着什么、起着什么作用。本篇中主要会着重讲一些海外的大厂提出的世界模型框架。'
 tags:
   - World Model
