--- a/src/content/docs/foundation/paper-list.mdx
+++ b/src/content/docs/foundation/paper-list.mdx
@@ -23,7 +23,7 @@ import { Aside } from 'astro-pure/user'
   subheading='具身操作VLA foundation model'
   date='2024-06-01'
 >
-<img src="/src/content/docs/foundation/papers/OpenVLA.png" alt="OpenVLA" />
+![OpenVLA](./papers/OpenVLA.png)
 </Card>
 <br />
 <Card
@@ -33,7 +33,7 @@ import { Aside } from 'astro-pure/user'
   subheading='具身操作VLA foundation model'
   date='2025-02-01'
 >
-<img src="/src/content/docs/foundation/papers/openvla-oft.png" alt="OpenVLA-OFT" />
+![OpenVLA-OFT](./papers/openvla-oft.png)
 </Card>
 <br />
 
@@ -45,7 +45,7 @@ import { Aside } from 'astro-pure/user'
   subheading='双臂协同操作foundation model'
   date='2024-10-01'
 >
-<img src="/src/content/docs/foundation/papers/RDT.png" alt="RDT" />
+![RDT](./papers/RDT.png)
 </Card>
 <br />
 <Card
@@ -55,7 +55,7 @@ import { Aside } from 'astro-pure/user'
   subheading='面向更加数据高效的双臂协同操作foundation model'
   date='2024-10-01'
 >
-<img src="/src/content/docs/foundation/papers/HRDT.png" alt="H-RDT" />
+![H-RDT](./papers/HRDT.png)
 </Card>
 ## TikTok GR系列工作
 
@@ -66,7 +66,7 @@ import { Aside } from 'astro-pure/user'
   subheading='字节跳动提出的基于大规模视频预训练模型'
   date='2023-12-01'
 >
-<img src="/src/content/docs/foundation/papers/GR1.png" alt="GR-1" />
+![GR-1](./papers/GR1.png)
 </Card>
 <br />
 <Card
@@ -76,7 +76,7 @@ import { Aside } from 'astro-pure/user'
   subheading='字节跳动提出的基于大规模视频预训练模型'
   date='2024-10-01'
 >
-<img src="/src/content/docs/foundation/papers/GR2.png" alt="GR-2" />
+![GR-2](./papers/GR2.png)
 </Card>
 <br />
 <Card
@@ -86,7 +86,7 @@ import { Aside } from 'astro-pure/user'
   subheading='字节跳动提出的基于大规模视频预训练模型'
   date='2025-07-01'
 >
-<img src="/src/content/docs/foundation/papers/GR3.png" alt="GR-3" />
+![GR-3](./papers/GR3.png)
 </Card>
 <br />
 
@@ -99,7 +99,7 @@ import { Aside } from 'astro-pure/user'
   subheading='RT系列VLA关键工作'
   date='2024-10-01'
 >
-<img src="/src/content/docs/foundation/papers/RT1.png" alt="RT-1" />
+![RT-1](./papers/RT1.png)
 </Card>
 <br />
 <Card
@@ -109,7 +109,7 @@ import { Aside } from 'astro-pure/user'
   subheading='RT系列VLA关键工作'
   date='2023-07-01'
 >
-<img src="/src/content/docs/foundation/papers/RT2.png" alt="RT-2" />
+![RT-2](./papers/RT2.png)
 </Card>
 <br />
 
@@ -124,7 +124,7 @@ import { Aside } from 'astro-pure/user'
   subheading='PI系列VLA关键工作'
   date='2024-10-01'
 >
-<img src="/src/content/docs/foundation/papers/pi0.png" alt="π0" />
+![π0](./papers/pi0.png)
 </Card>
 <br />
 <Card
@@ -134,7 +134,7 @@ import { Aside } from 'astro-pure/user'
   subheading='PI系列VLA关键工作'
   date='2024-10-01'
 >
-<img src="/src/content/docs/foundation/papers/pi05.png" alt="π0.5" />
+![π0.5](./papers/pi05.png)
 </Card>
 <br />
 
