add foundation paper list

--- a/src/content/docs/foundation/paper-list.mdx
+++ b/src/content/docs/foundation/paper-list.mdx
@@ -21,7 +21,7 @@ import { Aside } from 'astro-pure/user'
   href='https://arxiv.org/pdf/2406.09246'
   heading='OpenVLA: An Open-Source Vision-Language-Action Model'
   subheading='具身操作VLA foundation model'
-  date='2024-06-01'
+  date='2024-06'
 >
 ![OpenVLA](./papers/OpenVLA.png)
 </Card>
@@ -43,7 +43,7 @@ import { Aside } from 'astro-pure/user'
   href='https://arxiv.org/pdf/2410.07864'
   heading='RDT-1B: a Diffusion Foundation Model for Bimanual Manipulation'
   subheading='双臂协同操作foundation model'
-  date='2024-10-01'
+  date='2024-10'
 >
 ![RDT](./papers/RDT.png)
 </Card>
@@ -53,7 +53,7 @@ import { Aside } from 'astro-pure/user'
   href='https://www.arxiv.org/pdf/2507.23523'
   heading='H-RDT: Human Manipulation Enhanced Bimanual Robotic Manipulation'
   subheading='面向更加数据高效的双臂协同操作foundation model'
-  date='2024-10-01'
+  date='2024-10'
 >
 ![H-RDT](./papers/HRDT.png)
 </Card>
@@ -64,7 +64,7 @@ import { Aside } from 'astro-pure/user'
   href='https://arxiv.org/pdf/2312.13139'
   heading='UNLEASHING LARGE-SCALE VIDEO GENERATIVE PRE-TRAINING FOR VISUAL ROBOT MANIPULATION'
   subheading='字节跳动提出的基于大规模视频预训练模型'
-  date='2023-12-01'
+  date='2023-12'
 >
 ![GR-1](./papers/GR1.png)
 </Card>
@@ -74,7 +74,7 @@ import { Aside } from 'astro-pure/user'
   href='https://arxiv.org/pdf/2410.06158'
   heading='GR-2: A Generative Video-Language-Action Model with Web-Scale Knowledge for Robot Manipulation'
   subheading='字节跳动提出的基于大规模视频预训练模型'
-  date='2024-10-01'
+  date='2024-10'
 >
 ![GR-2](./papers/GR2.png)
 </Card>
@@ -90,14 +90,14 @@ import { Aside } from 'astro-pure/user'
 </Card>
 <br />
 
-## RT系列工作
+## Google-Research RT系列工作
 
 <Card
   as='a'
   href='https://arxiv.org/pdf/2212.06817'
   heading='RT-1: Robotics Transformer for Real-World Control at Scale'
   subheading='RT系列VLA关键工作'
-  date='2024-10-01'
+  date='2022-12'
 >
 ![RT-1](./papers/RT1.png)
 </Card>
@@ -107,13 +107,36 @@ import { Aside } from 'astro-pure/user'
   href='https://arxiv.org/pdf/2307.15818'
   heading='RT-2: Vision-Language-Action Models Transfer Web Knowledge to Robotic Control'
   subheading='RT系列VLA关键工作'
-  date='2023-07-01'
+  date='2023-07'
 >
 ![RT-2](./papers/RT2.png)
 </Card>
 <br />
 
+## PaLM-E系列工作
 
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2303.03378'
+  heading='PaLM-E: An Embodied Multimodal Language Model'
+  subheading='PaLM-E系列关键工作'
+  date='2023-03'  
+>
+![PaLM-E](./papers/Palme.png)
+</Card>
+<br />
+
+## Meta-AI系列工作
+
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2203.12601'
+  heading='R3M: A Universal Visual Representation for Robot Manipulation'
+  subheading='Meta-AI系列关键工作'
+  date='2022-03'  
+>
+![R3M](./papers/R3M.png)
+</Card>
 
 ## π系列工作
 
@@ -122,7 +145,7 @@ import { Aside } from 'astro-pure/user'
   href='https://arxiv.org/pdf/2410.24164v1'
   heading='π0: A Vision-Language-Action Flow Model for General Robot Control'
   subheading='PI系列VLA关键工作'
-  date='2024-10-01'
+  date='2024-10'
 >
 ![π0](./papers/pi0.png)
 </Card>
@@ -132,10 +155,58 @@ import { Aside } from 'astro-pure/user'
   href='https://arxiv.org/pdf/2410.24164v1'
   heading='π0.5: a Vision-Language-Action Model with Open-World Generalization'
   subheading='PI系列VLA关键工作'
-  date='2024-10-01'
+  date='2024-10'
 >
 ![π0.5](./papers/pi05.png)
 </Card>
 <br />
+
+## Being-Beyond系列工作
+
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2507.15597'
+  heading='Being-H0: Vision-Language-Action Pretraining from Large-Scale Human Videos'
+  subheading='通过现有的大规模数据，构建具身操作的foundation model'
+  date='2025-07'
+>
+![Being-H0](./papers/BeingH0.png)
+</Card>
+<br />
+
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2503.12533?'
+  heading='Being-0: A Humanoid Robotic Agent with Vision-Language Models and Modular Skills'
+  subheading='通过现有的大规模数据，构建具身操作的foundation model'
+  date='2025-03'
+>
+![Being-0](./papers/Being0.png)
+</Card>
+
+## Agibot系列工作
+
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2503.06669'
+  heading='AgiBot World Colosseo: A Large-scale Manipulation Platform for Scalable and Intelligent Embodied Systems'
+  subheading='Agibot系列关键工作'
+  date='2025-03'
+>
+![AgiBot World Colosseo](./papers/AgiBotWorldColosseo.png)
+</Card>
+<br />
+
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2508.05635v1'
+  heading='Genie Envisioner: A Unified World Foundation Platform for Robotic Manipulation'
+  subheading='Agibot系列关键工作'
+  date='2025-08'
+>
+![Genie Envisioner](./papers/GenieEnvisioner.png)
+</Card>
+<br />
+
 
 *Last updated: Aug.10 2025*
