--- a/src/content/activities/trifusion25.mdx
+++ b/src/content/activities/trifusion25.mdx
@@ -9,6 +9,8 @@ duration: "48小时"
 participants: 50
 heroImage: {src: './trifusion.png'}
 author: "VapourX Team"
+order: 3
+draft: true
 ---
 
 ## 活动概述
