--- a/src/content/docs/foundation/paper-list.mdx
+++ b/src/content/docs/foundation/paper-list.mdx
@@ -208,5 +208,73 @@ import { Aside } from 'astro-pure/user'
 </Card>
 <br />
 
+## Octo系列工作
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2405.12213'
+  heading='Octo: An Open-Source Generalist Robot Policy'
+  subheading='Octo系列关键工作'
+  date='2024-05'
+>
+![Octo](./papers/octo.png)
+</Card>
+<br />
 
-*Last updated: Aug.10 2025*
+## Embodied-R1 Series
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2508.13998'
+  heading='Embodied-R1: Reinforced Embodied Reasoning for General Robotic Manipulation'
+  subheading='参照R1的训练方法，进行Embodied Reasoning'
+  date='2025-08'
+>
+![Embodied-R1](./papers/EmbodiedR1.png)
+</Card>
+
+## 星海图系列工作
+
+<Card
+  as='a'
+  href='https://github.com/OpenGalaxea/G0/blob/main/Galaxea_G0_report.pdf'
+  heading='Galaxea Open-World Dataset & G0 Dual-System VLA Model'
+  subheading='星海图首个双系统VLA模型和开源数据集'
+  date='2025-08'
+>
+![Galaxea G0](./papers/GalaxeaG0.png)
+</Card>
+
+## 1X系列工作
+
+<Card
+  as='a'
+  href='https://www.1x.tech/1x-world-model.pdf'
+  heading='1X World Model: Evaluating Bits, not Atoms'
+  subheading='1X系列世界模型'
+  date='2025-08'
+>
+![1X World Model](./papers/1XWorldModel.png)
+</Card>
+
+## NVIDIA GR00T系列工作
+
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2503.14734'
+  heading='GR00T N1: An Open Foundation Model for Generalist Humanoid Robots'
+  subheading='NVIDIA GR00T系列首个工作，实现了大小脑模型架构'
+  date='2025-03'
+>
+![GR00T N1](./papers/GR00TN1.png)
+</Card>
+<br />
+
+<Card
+  as='a'
+  href='https://research.nvidia.com/labs/gear/gr00t-n1_5/'
+  heading='GR00T N1.5: An Improved Open Foundation Model for Generalist Humanoid Robots'
+  subheading='NVIDIA GR00T系列关键工作'
+  date='2025-06'
+>
+![GR00T N1](./papers/GR00TN1_5.png)
+</Card>
+*Last updated: Aug.21 2025*
