--- a/src/content/activities/nips_mars_workshop.mdx
+++ b/src/content/activities/nips_mars_workshop.mdx
@@ -2,16 +2,16 @@
 title: NeurIPS SpaVLE Workshop MARS Challenge
 description: "NeurIPS Workshop MARS Challenge"
 publishDate: 2025-08-19
-tags: ["challenge"]
+tags: ["challenge", "Multi-Agent"]
 heroImage: {src: ./mars_bg.png}
 activityType: "event"
 duration: "持续进行"
 author: "EthanQin et al."
 authorAvatar: "https://avatars.githubusercontent.com/u/49646214?v=4"
-order: 1
+order: 2
 ---
 
-我们将在 **NeurIPS 2025 SpaVLE Workshop** 上组织 **MARS 多智能体具身智能挑战赛** 🎉
+我们将在 **NeurIPS 2025 SpaVLE Workshop** 上组织 **MARS 多智能体具身智能挑战赛**！ 🎉
 
 本次挑战由 **上海交通大学、牛津大学、香港大学、UC San Diego** 等国内外机构联合发起，聚焦多具身智能体的 **高层规划** 与 **协同控制** 两大方向，精心设计了两个互补的赛道：
 
