--- a/src/content/activities/nips_world_model_workshop.mdx
+++ b/src/content/activities/nips_world_model_workshop.mdx
@@ -2,13 +2,13 @@
 title: NeurIPS Workshop Embodied World Models for Decision Making
 description: "NeurIPS Workshop 征稿"
 publishDate: 2025-08-13
-tags: ["contribution"]
+tags: ["workshop", "World Model"]
 heroImage: {src: ./nips_teaser.jpg}
 activityType: "event"
 duration: "持续进行"
 author: "Qi Wang et al."
 authorAvatar: "https://avatars.githubusercontent.com/u/22296010?s=400&u=302232952eb70cbe247d8e033b2f5532be2c6ba7&v=4"
-order: 2
+order: 3
 ---
 
 
