--- a/src/content/activities/trifusion25.mdx
+++ b/src/content/activities/trifusion25.mdx
@@ -1,16 +1,17 @@
 ---
 title: "TriFusion 2025 @ SIGGRAPH ASIA"
 description: "探讨人、机器人、数字人融合的各种可能"
-publishDate: 2025-08-10
-tags: ["Workshop", "Embodied AI", "Challenge"]
+publishDate: 2025-08-23
+tags: ["Workshop", "Embodied AI", "Computer Graphic"]
 activityType: "event"
 location: "中国香港"
 duration: "48小时"
 participants: 50
-heroImage: {src: './trifusion.png'}
+heroImage: {src: './trifusionbanner.png'}
 author: "VapourX Team"
-order: 3
-draft: true
+authorAvatar: "https://github.com/VapourX-ScaleLab/VapourX-ScaleLab.github.io/raw/main/.github/assets/vapourx-clean.jpg"
+order: 1
+draft: false
 ---
 
 ## 活动概述
@@ -18,11 +19,11 @@ draft: true
 
 其中该Workshop由多名VapourX的成员参与组织与管理，覆盖面包括Student Leader和Committee。
 
-本次活动将会邀请到数字人和机器人领域的专家进行专题分享和圆桌会议，并且设立了若干个workshop paper track以及challenge track，非常期待各位的参与！
+本次活动将会邀请到数字人和机器人领域的专家进行专题分享和圆桌会议，并且设立了若干个workshop paper track，非常期待各位的参与！
 
 ## 活动海报
 
-![TriFusion 2025 @ SIGGRAPH ASIA](Poster-new.png)
+![TriFusion 2025 @ SIGGRAPH ASIA](trifusion_poster.png)
 
 ## To Know More
 
