--- a/src/content/activities/trifusion25.mdx
+++ b/src/content/activities/trifusion25.mdx
@@ -6,7 +6,6 @@ tags: ["Workshop", "Embodied AI", "Computer Graphic"]
 activityType: "event"
 location: "中国香港"
 duration: "48小时"
-participants: 50
 heroImage: {src: './trifusionbanner.png'}
 author: "VapourX Team"
 authorAvatar: "https://github.com/VapourX-ScaleLab/VapourX-ScaleLab.github.io/raw/main/.github/assets/vapourx-clean.jpg"
@@ -29,6 +28,6 @@ draft: false
 
 更多信息将会在官网持续更新：[TriFusion 2025 @ SIGGRAPH ASIA](https://trifusion.b12sites.com)
 
-欢迎各位通过Google Form注册并选择意向参加workshop or challenge track：[Google Form](https://forms.gle/UVSDcdhon6dtZrQ9A)
+欢迎各位通过OpenReview上传你的工作：[Openreview Link](https://openreview.net/group?id=ACM.org/SGA/2025/Workshop/TriFusion)
 
 欢迎各位的关注与参与！
