--- a/src/content/docs/foundation/paper-list.mdx
+++ b/src/content/docs/foundation/paper-list.mdx
@@ -57,6 +57,17 @@ import { Aside } from 'astro-pure/user'
 >
 ![H-RDT](./papers/HRDT.png)
 </Card>
+
+<Card
+  as='a'
+  href='https://rdt-robotics.github.io/rdt2/'
+  heading='RDT2: Enabling Zero-Shot Cross-Embodiment Generalization by Scaling Up UMI Data'
+  subheading='基于UMI数据进一步泛化RDT能力以及零样本泛化能力。'
+  date='2025-09'
+>
+![RDT2](./papers/RDT2.png)
+</Card>
+
 ## TikTok GR系列工作
 
 <Card
@@ -90,7 +101,7 @@ import { Aside } from 'astro-pure/user'
 </Card>
 <br />
 
-## Google-Research RT系列工作
+## Google-Research系列工作
 
 <Card
   as='a'
@@ -112,6 +123,16 @@ import { Aside } from 'astro-pure/user'
 ![RT-2](./papers/RT2.png)
 </Card>
 <br />
+
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2509.151556'
+  heading='Self-Improving Embodied Foundation Models'
+  subheading='自进化基础模型达成数据飞轮。'
+  date='2025-09'
+>
+![SI-foundation](./papers/googlesi.png)
+</Card>
 
 ## PaLM-E系列工作
 
@@ -243,6 +264,17 @@ import { Aside } from 'astro-pure/user'
 ![Galaxea G0](./papers/GalaxeaG0.png)
 </Card>
 
+## 自变量机器人系列工作
+<Card
+  as='a'
+  href='https://arxiv.org/pdf/2509.11766'
+  heading='Igniting VLMs toward the Embodied Space'
+  subheading='自变量提出的推理-动作一体化模型。'
+  date='2025-09'
+>
+![Self-Variable Robot](./papers/walloss.png)
+</Card>
+
 ## 1X系列工作
 
 <Card
@@ -272,9 +304,9 @@ import { Aside } from 'astro-pure/user'
   as='a'
   href='https://research.nvidia.com/labs/gear/gr00t-n1_5/'
   heading='GR00T N1.5: An Improved Open Foundation Model for Generalist Humanoid Robots'
-  subheading='NVIDIA GR00T系列关键工作'
+  subheading='基于GR00T的构建，实现了在更加泛化的人形机器人上进行训练。'
   date='2025-06'
 >
-![GR00T N1](./papers/GR00TN1_5.png)
+![GR00T N1.5](./papers/N1_5.png)
 </Card>
 *Last updated: Aug.21 2025*
