--- a/src/content/activities/read_in_3rd.mdx
+++ b/src/content/activities/read_in_3rd.mdx
@@ -6,7 +6,7 @@ tags: ["read-in", "embodied AI"]
 # heroImage: {src: ./mars_bg.png}
 activityType: "read-in"
 duration: "1天"
-author: "上海交通大学学生创新中心"
+author: "VapourX"
 # authorAvatar: "https://avatars.githubusercontent.com/u/49646214?v=4"
 order: 2
 ---
@@ -74,7 +74,7 @@ order: 2
 - 企业宣讲：百度云具身智能系列产品和技术分享
 - Q&A Round和自由讨论、实验室参观环节
 
-本次读书会更多是偏向于具身智能发展至今的系统观念以及VLA相关的知识大串讲，大家可以在https://vapour-x.cn/docs/foundation/paper-list/中学习了解相关的前置知识。
+本次读书会更多是偏向于具身智能发展至今的系统观念以及VLA相关的知识大串讲，大家可以在https://vapour-x.cn/docs/foundation/paper-list/ 中学习了解相关的前置知识。
 
 ## 时间地点安排
 
