--- a/src/content/activities/nips_mars_workshop.mdx
+++ b/src/content/activities/nips_mars_workshop.mdx
@@ -4,7 +4,7 @@ description: "NeurIPS Workshop MARS Challenge"
 publishDate: 2025-08-19
 tags: ["challenge", "Multi-Agent"]
 heroImage: {src: ./mars_bg.png}
-activityType: "event"
+activityType: "学术活动"
 duration: "持续进行"
 author: "EthanQin et al."
 authorAvatar: "https://avatars.githubusercontent.com/u/49646214?v=4"
