--- a/src/content/activities/trifusion25.mdx
+++ b/src/content/activities/trifusion25.mdx
@@ -3,7 +3,7 @@ title: "TriFusion 2025 @ SIGGRAPH ASIA"
 description: "探讨人、机器人、数字人融合的各种可能"
 publishDate: 2025-08-23
 tags: ["Workshop", "Embodied AI", "Computer Graphic"]
-activityType: "event"
+activityType: "学术活动"
 location: "中国香港"
 duration: "48小时"
 heroImage: {src: './trifusionbanner.png'}
