--- a/src/content/docs/world-model/general-summary.mdx
+++ b/src/content/docs/world-model/general-summary.mdx
@@ -5,3 +5,5 @@ order: 1
 ---
 
 ## 具身世界模型
+
+具身世界模型正在慢慢变成具身智能领域中的一个Promising的方向，在近阶段有越来越多的工作开始使用生成式视频生成模型作为世界模型的基座赋能具身操作，在2023到2024年间，在自动驾驶领域已经有大量的使用生成式视频模型作为世界模型的在早期的强化学习范畴中，
